--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "stdio.h": "c",
-        "getopt.h": "c"
+        "getopt.h": "c",
+        "string.h": "c",
+        "unistd.h": "c",
+        "stdlib.h": "c"
     }
 }
