--- a/publisher/Makefile
+++ b/publisher/Makefile
@@ -3,17 +3,20 @@
 CC = gcc
 SRC = src
 CFLAGS = -Wall -c -Iinclude
-OBJ = main.o utils.o
+OBJ = main.o utils.o sensor.o
 TARGET = publisher
 
 $(TARGET): $(OBJ)
 	$(CC) $(OBJ) -o $(TARGET)
 
-main.o: $(SRC)/main.c include/utils.h
+main.o: $(SRC)/main.c include/utils.h include/sensor.h
 	$(CC) $(CFLAGS) $(SRC)/main.c -o main.o
 
 utils.o: $(SRC)/utils.c include/utils.h
 	$(CC) $(CFLAGS) $(SRC)/utils.c -o utils.o
+
+sensor.o: $(SRC)/sensor.c include/sensor.h
+	$(CC) $(CFLAGS) $(SRC)/sensor.c -o sensor.o
 
 clean:
 	rm -f *.o $(TARGET)
